--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">K BBQ Review</string>
+    <string name="icn_camera_view_switch_camera_content_description">switch camera</string>
+    <string name="icn_camera_view_camera_shutter_content_description">take picture</string>
+    <string name="icn_camera_view_view_gallery_content_description">open gallery</string>
 </resources>
