Updates: - Camera works and now it can send the image to AddReview.
To-Do:
- Add multiselect to the gallery.
- Make camera look more functional.

Issues:
- Permissions is still pretty weird.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="profile">profile</string>
     <string name="map">map</string>
     <string name="story">story</string>
+    <string name="icn_photo_view_backhand_description">go back</string>
+    <string name="icn_photo_view_check_description">select photo</string>
+    <string name="title_activity_camera">CameraActivity</string>
 </resources>
