Updates: - Made UI for story items. - Can launch map now.
To-Do:
- Make a bottom sheet.
- Make camera look more functional.
- Populate map with each location. Learn how to measure distance from current location. Oof.
- Have to make a proper sign in and profile screen. Maybe put it as a separate screen on the bottom
- Things to add to StoredPlace: Sum of review points, address, user name(make a username for each profile...), and I'm sure there is more.

Issues:
- Permissions is still pretty weird.
- App times out when trying to change screen from maps.
- When refreshed, the entire storyFeed is populated again. Have to learn how to compare the list and add any changes.
- App sometimes dies when sliding through the images downloaded from firebase.
- Firebase doesn't always load all the content, or at least, the main screen doesn't load it all right away.
- Map is acting weird in emulator.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="icn_photo_view_backhand_description">go back</string>
     <string name="icn_photo_view_check_description">select photo</string>
     <string name="title_activity_camera">CameraActivity</string>
+    <string name="lorem_impsum">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque facilisis blandit felis. Etiam ultricies rutrum ligula, in malesuada quam interdum quis. Aenean vitae pellentesque neque, in maximus leo. Maecenas iaculis enim ut hendrerit commodo. Nullam ornare efficitur ex a pharetra. Ut scelerisque pretium convallis. \"</string>
 </resources>
