Update: - Updated permissions - Updated reviewbar in add review - Started translating strings to korean

--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -1,58 +1,59 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">K BBQ Review</string>
     <string name="icn_camera_view_switch_camera_content_description">switch camera</string>
     <string name="icn_camera_view_camera_shutter_content_description">take picture</string>
     <string name="icn_camera_view_view_gallery_content_description">open gallery</string>
-    <string name="profile">profile</string>
-    <string name="map">map</string>
-    <string name="story">story</string>
+    <string name="profile">프로필</string>
+    <string name="map">지도</string>
+    <string name="story">스토리</string>
     <string name="icn_photo_view_backhand_description">go back</string>
-    <string name="icn_photo_view_check_description">select photo</string>
+    <string name="icn_photo_view_check_description">사진을 선택</string>
     <string name="title_activity_camera">CameraActivity</string>
     <string name="facebook_app_id">389311636697354</string>
     <string name="fb_login_protocol_scheme">fb389311636697354</string>
     <string name="facebook_client_token">d61bade1fd2a0ce42eb47469cffba4f5</string>
     <string name="lorem_impsum">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque facilisis blandit felis. Etiam ultricies rutrum ligula, in malesuada quam interdum quis. Aenean vitae pellentesque neque, in maximus leo. Maecenas iaculis enim ut hendrerit commodo. Nullam ornare efficitur ex a pharetra. Ut scelerisque pretium convallis. \"</string>
-    <string name="take_picture">Take picture</string>
-    <string name="captured_image">Captured image</string>
+    <string name="take_picture">사진을 찍기</string>
+    <string name="captured_image">찍은 사진</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="description_meat">How was the meat? Rate it based on your experience.</string>
     <string name="description_side_dishes">"What kind of side dishes were there? Was it flavorful? "</string>
     <string name="description_amenities">How were the amenities? Was the place clean? Did it have good ventilation?</string>
     <string name="description_atmosphere">How was the vibe there? Was it a nice and quiet mood? Was it lively?</string>
     <string name="short_review">Shorten review.</string>
-    <string name="optional_write_about_it">Write about it (Optional)</string>
+    <string name="optional_write_about_it">(Optional) Write about it</string>
     <string name="check_location">Add location!</string>
     <string name="check_photo">Add a photo!</string>
     <string name="check_name">Add a name!</string>
     <string name="review_saved">Review saved!</string>
-    <string name="submit">Submit</string>
+    <string name="submit">제출</string>
     <string name="my_location">My location</string>
-    <string name="open_map">Open map</string>
-    <string name="restaurant_name">Restaurant name</string>
+    <string name="open_map">지도를 열기</string>
+    <string name="restaurant_name">맛집 이름</string>
     <string name="remove_photo">Remove photo</string>
-    <string name="title_meat">Meat</string>
-    <string name="title_side_dishes">Side Dishes</string>
-    <string name="title_amenities">Amenities</string>
-    <string name="title_atmosphere">Atmosphere</string>
-    <string name="add_review">Add Review</string>
-    <string name="report">Report</string>
+    <string name="title_meat">고기</string>
+    <string name="title_side_dishes">반찬</string>
+    <string name="title_amenities">시설</string>
+    <string name="title_atmosphere">분위기</string>
+    <string name="add_review">리뷰 추가</string>
+    <string name="report">신고하디</string>
     <string name="go_to_email">Go to email</string>
     <string name="dismiss">Dismiss</string>
-    <string name="more">More</string>
-    <string name="share">Share</string>
+    <string name="more">더</string>
+    <string name="share">공유</string>
     <string name="signed_in">Signed in!</string>
     <string name="failed_sign_in">Failed to sign in.</string>
     <string name="take_profile_photo">Take profile picture</string>
     <string name="shorten_name">Shorten name.</string>
-    <string name="profile_name">Profile name</string>
+    <string name="profile_name">프로필의 이름</string>
     <string name="complete_sign_in">Complete sign in</string>
-    <string name="hey_welcome">Hey! Welcome</string>
+    <string name="hey_welcome">안녕! 환영합니다</string>
     <string name="get_started">Get started</string>
     <string name="have_an_account">Already have an account?</string>
     <string name="authentication_failed">Authentication failed.</string>
-    <string name="email_address">Email address</string>
-    <string name="password">Password</string>
+    <string name="email_address">이메일주소</string>
+    <string name="password">비밀번호</string>
     <string name="create_account">Create Account</string>
     <string name="continue_with_google">Continue with Google</string>
     <string name="enter_an_email_address">Please enter an email address</string>
@@ -64,16 +65,16 @@
     <string name="post_updated">Post updated.</string>
     <string name="update">Update</string>
     <string name="delete_post_question">Delete post?</string>
-    <string name="delete">Delete</string>
-    <string name="delete_warning">The post cannot be recovered once you delete.</string>
-    <string name="edit_post">Edit post</string>
-    <string name="delete_post_confirmation">Delete post</string>
-    <string name="show_less">Show less</string>
-    <string name="show_more">... Show More</string>
-    <string name="view_grid">Grid view</string>
-    <string name="view_single">Single view</string>
-    <string name="total_reviews">Total Reviews</string>
-    <string name="options">Options</string>
-    <string name="sign_out">Sign out</string>
-    <string name="account_settings">Account settings</string>
+    <string name="delete">삭제</string>
+    <string name="delete_warning">삭제하면 리뷰를 복구할 수가 없습니다.</string>
+    <string name="edit_post">리뷰를 편집하기</string>
+    <string name="delete_post_confirmation">리뷰 삭제</string>
+    <string name="show_less">덜 보디</string>
+    <string name="show_more">… 더 보기</string>
+    <string name="view_grid">격자무늬 뷰</string>
+    <string name="view_single">단일 뷰</string>
+    <string name="total_reviews">전체의 리뷰</string>
+    <string name="options">설정</string>
+    <string name="sign_out">로그아웃</string>
+    <string name="account_settings">프로필 설정</string>
 </resources>
