--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="complete_sign_in">Complete sign in</string>
     <string name="hey_welcome">Hey! Welcome</string>
     <string name="get_started">Get started</string>
-    <string name="have_an_account">Already have an account?</string>
+    <string name="have_an_account">Already registered?</string>
     <string name="authentication_failed">Authentication failed.</string>
     <string name="email_address">Email address</string>
     <string name="password">Password</string>
