--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="options">Options</string>
     <string name="sign_out">Sign out</string>
     <string name="account_settings">Account settings</string>
+    <string name="block">Block this user</string>
 </resources>
